services.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: http-echo
    app2: foo-only
spec:
  containers:
  - name: foo-app
    image: hashicorp/http-echo:1.0
    args:
    - "-text=foo"
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: http-echo
spec:
  containers:
  - name: bar-app
    image: hashicorp/http-echo:1.0
    args:
    - "-text=bar"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-bar-service
spec:
  type: LoadBalancer
  selector:
    app: http-echo
  ports:
  - port: 5678
---
kind: Service
apiVersion: v1
metadata:
  name: foo-only-service
spec:
  type: LoadBalancer
  selector:
    app2: foo-only
  ports:
  - port: 5678
